# NWS-Forecast

./: CMakeLists.txt  README.md  conanfile.txt  nws.cpp  zips.csv
.github/: dependabot.yml
include/: Classes.h  Functions.h
